--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
 
 .row {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
+  grid-template-columns: repeat(15, 1fr);
   background-color: blue;
 }
 
@@ -31,6 +31,11 @@ h1 {
 
 .purple {
   background-color: purple;
+  border: 1px solid black;
+}
+
+.orange {
+  background-color: orange;
   border: 1px solid black;
 }
 
