--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ h1 {
   border: 1px solid black;
 }
 
+.dark-blue {
+  background-color: darkblue;
+  border: 1px solid black;
+}
 .border {
   background-color: black;
 }
