--- a/style.css
+++ b/style.css
@@ -43,6 +43,12 @@ h1 {
   background-color: darkblue;
   border: 1px solid black;
 }
+
+.red {
+  background-color: red;
+  border: 1px solid black;
+}
+
 .border {
   background-color: black;
 }
